--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ python:
 install: "pip install -r requirements.txt"
 script: python spider.py travis
 after_success:
+  - chmod +x ./upload.sh
   - ./upload.sh
